--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,12 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
+  Welcome to Kurapak App 
+  <button ion-button color="light" outline>Light Outline</button>
+  <button ion-button outline>Primary Outline</button>
+<button ion-button color="secondary" outline>Secondary Outline</button>
+<button ion-button color="danger" outline>Danger Outline</button>
+<button ion-button color="dark" outline>Dark Outline</button>
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
