--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,19 +1,32 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+  <ion-navbar color="secondary">
+    <div padding>
+    <ion-title>Welcome to Kurapak App</ion-title>
+  </div>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  Welcome to Kurapak App 
-  <button ion-button color="light" outline>Light Outline</button>
-  <button ion-button outline>Primary Outline</button>
-<button ion-button color="secondary" outline>Secondary Outline</button>
-<button ion-button color="danger" outline>Danger Outline</button>
-<button ion-button color="dark" outline>Dark Outline</button>
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+  <ion-list inset>
+
+    <ion-item>
+      <ion-label>Username</ion-label>
+      <ion-input type="text" value=""></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Password</ion-label>
+      <ion-input type="password" value=""></ion-input>
+    </ion-item>
+
+  </ion-list>
+
+  <div padding>
+    <button ion-button (click)="nextPage();" color="primary" block small>Sign In</button>
+  </div>
+
+  <div padding>
+    <p>Don't have an account? Sign Up now!</p>
+    <button ion-button color="secondary" outline>Sign Up</button>
+  </div>
 </ion-content>
