Ubah button sign up

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,11 +22,11 @@
   </ion-list>
 
   <div padding>
-    <button ion-button (click)="nextPage();" color="primary" block small>Sign In</button>
+    <button ion-button color="primary" block small>Sign In</button>
   </div>
 
   <div padding>
     <p>Don't have an account? Sign Up now!</p>
-    <button ion-button color="secondary" outline>Sign Up</button>
+    <button ion-button (click)="nextPage();"  color="secondary" outline>Sign Up</button>
   </div>
 </ion-content>
