--- a/src/pages/selection/selection.html
+++ b/src/pages/selection/selection.html
@@ -25,7 +25,8 @@
     <ion-card>
       <img src="assets/img/card-saopaolo.png"/>
       <div class="card-title">São Paulo</div>
-      <div class="card-subtitle">41 Listings</div>
+      <div class="card-subtitle">41 Listings</div>  
+      //Above change to button
     </ion-card>
   
     <ion-card>
