--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,7 +22,7 @@
   </ion-list>
 
   <div padding>
-    <button ion-button color="primary" block small>Sign In</button>
+    <button ion-button (click)="nextPage1();"color="primary" block small>Sign In</button>
   </div>
 
   <div padding>
