--- a/src/pages/second/second.html
+++ b/src/pages/second/second.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="secondary">
     <ion-title>
-      Ionic Blank
+      Almost There
     </ion-title>
-  </ion-navbar>
+  </ion-navbar >
 </ion-header>
 
 <ion-content padding>
@@ -40,8 +40,8 @@
      </ion-item>
      </p>
  
+    
      <div padding>
-       <Button >Sign In</Button>
-       
-     </div>
+      <button ion-button color="secondary" outline>Sign Up</button>
+    </div>
  </ion-list>
