Add images to Rahman Pages

--- a/src/pages/selection/selection.html
+++ b/src/pages/selection/selection.html
@@ -23,7 +23,7 @@
   <ion-content class="card-background-page">
   
     <ion-card>
-      <img src="assets/img/card-saopaolo.png"/>
+      <img src="assets/imgs/1.jpg"/>
       <div class="card-title">São Paulo</div>
       <div class="card-subtitle">41 Listings</div>  
       //Above change to button
