--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,32 +1,21 @@
-<ion-header>
-  <ion-navbar color="secondary">
-    <div padding>
-    <ion-title>Welcome to Kurapak App</ion-title>
-  </div>
-  </ion-navbar>
-</ion-header>
-
-<ion-content>
-  <ion-list inset>
-
-    <ion-item>
-      <ion-label>Username</ion-label>
-      <ion-input type="text" value=""></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label>Password</ion-label>
-      <ion-input type="password" value=""></ion-input>
-    </ion-item>
-
-  </ion-list>
-
+<ion-content class="home">
+    <img src="assets/imgs/Logo.png" class="logo">
+      <ion-list padding>
+          <ion-item>
+            <ion-input type="text" placeholder="Username"></ion-input>
+          </ion-item>
+        
+          <ion-item>
+            <ion-input type="password" placeholder="Password"></ion-input>
+          </ion-item>
+        
+        </ion-list>
+  
   <div padding>
-    <button ion-button (click)="nextPage1();"color="primary" block small>Sign In</button>
+    <button ion-button (click)="nextPage1();"color="btn" block>SIGN IN</button>
   </div>
-
   <div padding>
-    <p>Don't have an account? Sign Up now!</p>
-    <button ion-button (click)="nextPage();"  color="secondary" outline>Sign Up</button>
+    <p class="marginTop">Don't have an account? Sign Up now!</p>
+    <button ion-button (click)="nextPage();"  color="btn" block>SIGN UP</button>
   </div>
 </ion-content>
