update selection page

--- a/src/pages/selection/selection.html
+++ b/src/pages/selection/selection.html
@@ -13,10 +13,10 @@
 </ion-header>
 
 
-<ion-content padding>
+
   <ion-header>
     <ion-navbar>
-      <ion-title>Background Images</ion-title>
+      <ion-title>Language Select</ion-title>
     </ion-navbar>
   </ion-header>
   
@@ -24,28 +24,46 @@
   
     <ion-card>
       <img src="assets/imgs/1.jpg"/>
-      <div class="card-title">São Paulo</div>
-      <div class="card-subtitle">41 Listings</div>  
-      //Above change to button
+      <div class="card-title">Puak</div>
+      <div class="card-subtitle">Melayu Brunei</div>  
+      !--//Above change to button--
     </ion-card>
   
     <ion-card>
-      <img src="assets/img/card-amsterdam.png"/>
-      <div class="card-title">Amsterdam</div>
-      <div class="card-subtitle">64 Listings</div>
+      <img src="assets/imgs/2.jpg"/>
+      <div class="card-title">Puak</div>
+      <div class="card-subtitle">Dusun Brunei</div>
     </ion-card>
   
     <ion-card>
-      <img src="assets/img/card-sf.png"/>
-      <div class="card-title">San Francisco</div>
-      <div class="card-subtitle">72 Listings</div>
+      <img src="assets/imgs/3.jpg"/>
+      <div class="card-title">Puak</div>
+      <div class="card-subtitle">Tutong Brunei</div>
     </ion-card>
   
     <ion-card>
-      <img src="assets/img/card-madison.png"/>
-      <div class="card-title">Madison</div>
-      <div class="card-subtitle">28 Listings</div>
+      <img src="assets/imgs/4.jpg"/>
+      <div class="card-title">Puak</div>
+      <div class="card-subtitle">Belait Brunei</div>
+    </ion-card>
+
+    <ion-card>
+      <img src="assets/imgs/5.jpg"/>
+      <div class="card-title">Puak</div>
+      <div class="card-subtitle">Bisaya Brunei</div>
+    </ion-card>
+
+    <ion-card>
+      <img src="assets/imgs/6.jpg"/>
+      <div class="card-title">Puak</div>
+      <div class="card-subtitle">Kedayan Brunei</div>
+    </ion-card>
+
+    <ion-card>
+      <img src="assets/imgs/7.jpg"/>
+      <div class="card-title">Puak</div>
+      <div class="card-subtitle">Murut Brunei</div>
     </ion-card>
   
-  </ion-content>
+  
 </ion-content>
