--- a/src/pages/selection/selection.html
+++ b/src/pages/selection/selection.html
@@ -1,22 +1,6 @@
-<!--
-  Generated template for the SelectionPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>selection</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-
   <ion-header>
     <ion-navbar>
-      <ion-title>Language Select</ion-title>
+      <ion-title>Select Language</ion-title>
     </ion-navbar>
   </ion-header>
   
