selection update css

--- a/src/pages/selection/selection.html
+++ b/src/pages/selection/selection.html
@@ -7,44 +7,45 @@
   <ion-content class="card-background-page">
   
     <ion-card>
-      <img src="assets/imgs/1.jpg"/>
+      <img src="assets/imgs/1.jpg" class="img"/>
+      
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Melayu Brunei</div>  
-      !--//Above change to button--
+      
     </ion-card>
   
     <ion-card>
-      <img src="assets/imgs/2.jpg"/>
+      <img src="assets/imgs/2.jpg" class="img"/>
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Dusun Brunei</div>
     </ion-card>
   
     <ion-card>
-      <img src="assets/imgs/3.jpg"/>
+      <img src="assets/imgs/3.jpg" class="img"/>
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Tutong Brunei</div>
     </ion-card>
   
     <ion-card>
-      <img src="assets/imgs/4.jpg"/>
+      <img src="assets/imgs/4.jpg" class="img"/>
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Belait Brunei</div>
     </ion-card>
 
     <ion-card>
-      <img src="assets/imgs/5.jpg"/>
+      <img src="assets/imgs/5.jpg" class="img"/>
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Bisaya Brunei</div>
     </ion-card>
 
     <ion-card>
-      <img src="assets/imgs/6.jpg"/>
+      <img src="assets/imgs/6.jpg" class="img"/>
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Kedayan Brunei</div>
     </ion-card>
 
     <ion-card>
-      <img src="assets/imgs/7.jpg"/>
+      <img src="assets/imgs/7.jpg" class="img"/>
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Murut Brunei</div>
     </ion-card>
