--- a/src/pages/second/second.html
+++ b/src/pages/second/second.html
@@ -11,7 +11,7 @@
   <h6>I am a(n):</h6>
   <ion-item>
     <ion-label>Student</ion-label>
-    <ion-checkbox color="dark"></ion-checkbox>
+    <ion-checkbox color="dark" ></ion-checkbox>
   </ion-item>
   <ion-item>
    <ion-label>Education Professional</ion-label>
@@ -35,7 +35,7 @@
      </ion-item>
  
      <ion-item>
-         <ion-label >Name</ion-label>
+         <ion-label >Username</ion-label>
          <ion-input type="text" value=""></ion-input>
      </ion-item>
      </p>
