--- a/src/pages/second/second.html
+++ b/src/pages/second/second.html
@@ -42,6 +42,6 @@
  
     
      <div padding>
-      <button ion-button color="secondary" outline>Sign Up</button>
+      <button ion-button (click)="nextPage2();" color="secondary" outline>Sign Up</button>
     </div>
  </ion-list>
