--- a/src/pages/selection/selection.html
+++ b/src/pages/selection/selection.html
@@ -10,44 +10,50 @@
       <img src="assets/imgs/1.jpg" class="img"/>
       
       <div class="card-title">Puak</div>
-      <div class="card-subtitle">Melayu Brunei</div>  
-      
+      <div class="card-subtitle">Melayu Brunei</div>
+      <button ion-button (click)="melayuPage();"  color="btn" block>Enter</button> 
     </ion-card>
   
     <ion-card>
       <img src="assets/imgs/2.jpg" class="img"/>
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Dusun Brunei</div>
+      <button ion-button (click)="dusunPage();"  color="btn" block>Enter</button>
     </ion-card>
   
     <ion-card>
       <img src="assets/imgs/3.jpg" class="img"/>
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Tutong Brunei</div>
+      <button ion-button (click)="tutongPage();"  color="btn" block>Enter</button>
     </ion-card>
   
     <ion-card>
       <img src="assets/imgs/4.jpg" class="img"/>
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Belait Brunei</div>
+      <button ion-button (click)="belaitPage();"  color="btn" block>Enter</button>
     </ion-card>
 
     <ion-card>
       <img src="assets/imgs/5.jpg" class="img"/>
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Bisaya Brunei</div>
+      <button ion-button (click)="bisayaPage();"  color="btn" block>Enter</button>
     </ion-card>
 
     <ion-card>
       <img src="assets/imgs/6.jpg" class="img"/>
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Kedayan Brunei</div>
+      <button ion-button (click)="kedayanPage();"  color="btn" block>Enter</button>
     </ion-card>
 
     <ion-card>
       <img src="assets/imgs/7.jpg" class="img"/>
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Murut Brunei</div>
+      <button ion-button (click)="murutPage();"  color="btn" block>Enter</button>
     </ion-card>
   
   
