page brunei and icon

--- a/src/pages/melayu-brunei/melayu-brunei.html
+++ b/src/pages/melayu-brunei/melayu-brunei.html
@@ -14,5 +14,46 @@
 
 
 <ion-content padding>
-
+  <table width="200" border="1">
+    <tr>
+      <td>Ambat</td>
+      <td><em><img src="assets/imgs/next.png" width="50" height="50" /></em></td>
+    </tr>
+    <tr>
+      <td>Asuh</td>
+      <td><em><img src="assets/imgs/next.png" alt="" width="50" height="50" /></em></td>
+    </tr>
+    <tr>
+      <td>Alih</td>
+      <td><em><img src="assets/imgs/next.png" alt="" width="50" height="50" /></em></td>
+    </tr>
+    <tr>
+      <td>Anjung</td>
+      <td><em><img src="assets/imgs/next.png" alt="" width="50" height="50" /></em></td>
+    </tr>
+    <tr>
+      <td>Babal</td>
+      <td><em><img src="assets/imgs/next.png" alt="" width="50" height="50" /></em></td>
+    </tr>
+    <tr>
+      <td>Bangkit</td>
+      <td><em><img src="assets/imgs/next.png" alt="" width="50" height="50" /></em></td>
+    </tr>
+    <tr>
+      <td>Basuh</td>
+      <td><em><img src="assets/imgs/next.png" alt="" width="50" height="50" /></em></td>
+    </tr>
+    <tr>
+      <td>Baring</td>
+      <td><em><img src="assets/imgs/next.png" alt="" width="50" height="50" /></em></td>
+    </tr>
+    <tr>
+      <td>Cungkil</td>
+      <td><em><img src="assets/imgs/next.png" alt="" width="50" height="50" /></em></td>
+    </tr>
+    <tr>
+      <td>Calak</td>
+      <td><em><img src="assets/imgs/next.png" alt="" width="50" height="50" /></em></td>
+    </tr>
+  </table>
 </ion-content>
