Bunai Page language update

--- a/src/pages/melayu-brunei/melayu-brunei.html
+++ b/src/pages/melayu-brunei/melayu-brunei.html
@@ -21,10 +21,10 @@
 
     <ion-card-content>
       <ion-card-title>
-        Nine Inch Nails Live
+        Asuh
       </ion-card-title>
       <p>
-        The most popular industrial group ever, and largely responsible for bringing the music to a mass audience.
+        Menyuruh, Mendulur 
       </p>
     </ion-card-content>
 
@@ -59,10 +59,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Erykah Badu
+        Ambat
       </ion-card-title>
       <p>
-      American singer-songwriter, record producer, activist, and actress, Badu's style is a prime example of neo-soul.
+        Pukul, Memukul 
+        In english : Hit / Hip dont lie
       </p>
     </ion-card-content>
 
