--- a/src/pages/tutong/tutong.html
+++ b/src/pages/tutong/tutong.html
@@ -16,15 +16,13 @@
 <ion-content class="cards-bg">
 
   <ion-card>
-
-   
-
     <ion-card-content>
       <ion-card-title>
-        Asuh
+       Buas
       </ion-card-title>
       <p>
-        Menyuruh, Mendulur 
+        In Malay - Tuah <br>
+        In English - Lucky
       </p>
     </ion-card-content>
 
@@ -59,11 +57,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Ambat
+        Buat
       </ion-card-title>
       <p>
-        Pukul, Memukul 
-        In english : Hit / Hip dont lie
+        In Malay - Panjang<br>
+        In english - Long
       </p>
     </ion-card-content>
 
@@ -98,10 +96,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Queen
+       De'ek
       </ion-card-title>
       <p>
-        The British rock band formed in London in 1970, and is considered one of the biggest stadium rock bands in the world.
+        In Malay - Kecil  <br>
+        In English - Small
       </p>
     </ion-card-content>
 
@@ -136,10 +135,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Run-D.M.C.
+        Dabo
       </ion-card-title>
       <p>
-        The American hip hop group widely acknowledged as one of the most influential acts in the history of hip hop.
+        In Malay - belanga / periuk <br>
+        In English - mangkuks
       </p>
     </ion-card-content>
 
@@ -165,5 +165,7 @@
     </ion-row>
 
   </ion-card>
+
+  
 
 </ion-content>
