--- a/src/pages/second/second.html
+++ b/src/pages/second/second.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="secondary">
+  <ion-navbar color="btn">
     <ion-title>
       Almost There
     </ion-title>
@@ -42,6 +42,6 @@
  
     
      <div padding>
-      <button ion-button (click)="nextPage2();" color="secondary" outline>Sign Up</button>
+      <button ion-button (click)="nextPage2();" color="btn" outline>Sign Up</button>
     </div>
  </ion-list>
