--- a/src/pages/selection/selection.html
+++ b/src/pages/selection/selection.html
@@ -11,7 +11,7 @@
       
       <div class="card-title">Puak</div>
       <div class="card-subtitle">Melayu Brunei</div>
-      <button ion-button (click)="melayuPage();"  color="btn" block>Enter</button> 
+      <button ion-button (click)="melayuPage();"  color="btn" block medium>Enter</button> 
     </ion-card>
   
     <ion-card>
