--- a/src/pages/slides/slides.html
+++ b/src/pages/slides/slides.html
@@ -1,8 +1,8 @@
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
     <ion-title>Slides</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content class="tutorial-page">
 
@@ -10,7 +10,7 @@
     <ion-slide *ngFor="let slide of slides">
       <ion-toolbar>
         <ion-buttons end>
-          <button ion-button color="primary" (click)="hooomePage();" >Skip</button>
+          <button ion-button color="btn" block (click)="hooomePage();" >Skip</button>
         </ion-buttons>
       </ion-toolbar>
       <img [src]="slide.image" class="slide-image"/>
@@ -20,9 +20,9 @@
     <ion-slide>
       <ion-toolbar>
       </ion-toolbar>
-      <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/>
-      <h2 class="slide-title">Ready to Play?</h2>
-      <button ion-button large clear icon-end color="primary" (click)="hooomePage();">
+      <!-- <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/> -->
+      <h2 class="slide-title">Want to learn?</h2>
+      <button ion-button icon-end color="btn" clear large (click)="hooomePage();">
         Continue
         <ion-icon name="arrow-forward"></ion-icon>
       </button>
