--- a/src/pages/belait/belait.html
+++ b/src/pages/belait/belait.html
@@ -7,12 +7,27 @@
 
 
 <ion-header>
+    <ion-toolbar>
+        
+            <button>
+                <ion-icon menuToggle name= "menu"></ion-icon>
+            </button>
 
-  <ion-navbar>
-    <ion-title>Belait</ion-title>
-  </ion-navbar>
-
+        <ion-title>
+            NAVIGATION
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
+
+
+
+
+
+    <!-- <ion-navbar primary>
+      <ion-title>Belait</ion-title>
+    </ion-navbar> -->
+  
+ 
 
 <ion-content class="cards-bg">
 
