--- a/src/pages/kedayan/kedayan.html
+++ b/src/pages/kedayan/kedayan.html
@@ -4,13 +4,30 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+
 <ion-header>
+    <ion-toolbar>
+        
+            <button>
+                <ion-icon menuToggle name= "menu"></ion-icon>
+            </button>
+
+        <ion-title>
+            NAVIGATION
+        </ion-title>
+    </ion-toolbar>
+</ion-header>
+
+
+
+
+<!-- <ion-header>
 
   <ion-navbar>
     <ion-title>Kedayan</ion-title>
   </ion-navbar>
 
-</ion-header>
+</ion-header> -->
 
 
 <ion-content class="cards-bg">
