--- a/src/pages/murut/murut.html
+++ b/src/pages/murut/murut.html
@@ -5,12 +5,27 @@
   Ionic pages and navigation.
 -->
 <ion-header>
+    <ion-toolbar>
+        
+            <button>
+                <ion-icon menuToggle name= "menu"></ion-icon>
+            </button>
+
+        <ion-title>
+            NAVIGATION
+        </ion-title>
+    </ion-toolbar>
+</ion-header>
+
+
+
+<!-- <ion-header>
 
   <ion-navbar>
     <ion-title>Murut</ion-title>
   </ion-navbar>
 
-</ion-header>
+</ion-header> -->
 
 
 <ion-content class="cards-bg">
