--- a/src/pages/dusun/dusun.html
+++ b/src/pages/dusun/dusun.html
@@ -38,10 +38,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Asuh
+        Dondom
       </ion-card-title>
       <p>
-        Menyuruh, Mendulur 
+        In Malay - Esok <br>
+        In English - Tomorrow
       </p>
     </ion-card-content>
 
@@ -59,10 +60,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
@@ -76,11 +77,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Ambat
+        Lomot
       </ion-card-title>
       <p>
-        Pukul, Memukul 
-        In english : Hit / Hip dont lie
+        In Malay - Diam <br>
+        In English - Silent, Quiet
       </p>
     </ion-card-content>
 
@@ -98,10 +99,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
@@ -115,10 +116,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Queen
+        Kuku
       </ion-card-title>
       <p>
-        The British rock band formed in London in 1970, and is considered one of the biggest stadium rock bands in the world.
+       In Malay - Duduk <br>
+       In English - Sit
       </p>
     </ion-card-content>
 
@@ -136,10 +138,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
@@ -153,10 +155,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Run-D.M.C.
+        Tanggang
       </ion-card-title>
       <p>
-        The American hip hop group widely acknowledged as one of the most influential acts in the history of hip hop.
+       In Malay - Angkat <br>
+       In English - Lift
       </p>
     </ion-card-content>
 
@@ -174,10 +177,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
