--- a/src/pages/belait/belait.html
+++ b/src/pages/belait/belait.html
@@ -20,10 +20,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Asuh
+        Ungeil
       </ion-card-title>
       <p>
-        Menyuruh, Mendulur 
+        In Malay - Putung
+        In English - Cut  
       </p>
     </ion-card-content>
 
@@ -42,8 +43,8 @@
       </ion-col>
       <ion-col text-right>
         <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
         </button>
       </ion-col>
     </ion-row>
@@ -58,11 +59,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Ambat
+        Banasi
       </ion-card-title>
       <p>
-        Pukul, Memukul 
-        In english : Hit / Hip dont lie
+        In Malay - Rusak
+        In English - Broken
       </p>
     </ion-card-content>
 
@@ -81,8 +82,8 @@
       </ion-col>
       <ion-col text-right>
         <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
         </button>
       </ion-col>
     </ion-row>
@@ -97,10 +98,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Queen
+        Muwad
       </ion-card-title>
       <p>
-        The British rock band formed in London in 1970, and is considered one of the biggest stadium rock bands in the world.
+       In Malay - Selesma
+       In English - Fever
       </p>
     </ion-card-content>
 
@@ -119,8 +121,8 @@
       </ion-col>
       <ion-col text-right>
         <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
         </button>
       </ion-col>
     </ion-row>
@@ -135,10 +137,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Run-D.M.C.
+        Punggung
       </ion-card-title>
       <p>
-        The American hip hop group widely acknowledged as one of the most influential acts in the history of hip hop.
+        In Malay - ieng
+        In English - Hip
       </p>
     </ion-card-content>
 
@@ -157,8 +160,8 @@
       </ion-col>
       <ion-col text-right>
         <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
         </button>
       </ion-col>
     </ion-row>
