--- a/src/pages/murut/murut.html
+++ b/src/pages/murut/murut.html
@@ -21,10 +21,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Asuh
+        Ngenaid
       </ion-card-title>
       <p>
-        Menyuruh, Mendulur 
+        In Malay - Tunggu
+        In English - Wait
       </p>
     </ion-card-content>
 
@@ -43,8 +44,8 @@
       </ion-col>
       <ion-col text-right>
         <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
         </button>
       </ion-col>
     </ion-row>
@@ -59,11 +60,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Ambat
+        Mecang
       </ion-card-title>
       <p>
-        Pukul, Memukul 
-        In english : Hit / Hip dont lie
+        In Malay - Siang
+        In English - Day time
       </p>
     </ion-card-content>
 
@@ -82,8 +83,8 @@
       </ion-col>
       <ion-col text-right>
         <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
         </button>
       </ion-col>
     </ion-row>
@@ -98,10 +99,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Queen
+        Magai
       </ion-card-title>
       <p>
-        The British rock band formed in London in 1970, and is considered one of the biggest stadium rock bands in the world.
+        In Malay - Selalu
+        In English - Always
       </p>
     </ion-card-content>
 
@@ -120,8 +122,8 @@
       </ion-col>
       <ion-col text-right>
         <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
         </button>
       </ion-col>
     </ion-row>
@@ -136,10 +138,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Run-D.M.C.
+        Libut
       </ion-card-title>
       <p>
-        The American hip hop group widely acknowledged as one of the most influential acts in the history of hip hop.
+        In Malay - Pusing
+        In English - Turn
       </p>
     </ion-card-content>
 
@@ -158,8 +161,8 @@
       </ion-col>
       <ion-col text-right>
         <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
         </button>
       </ion-col>
     </ion-row>
