--- a/src/pages/kedayan/kedayan.html
+++ b/src/pages/kedayan/kedayan.html
@@ -21,10 +21,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Asuh
+        Selesema
       </ion-card-title>
       <p>
-        Menyuruh, Mendulur 
+        In Malay - Salisma
+        In English - Fever
       </p>
     </ion-card-content>
 
@@ -43,8 +44,8 @@
       </ion-col>
       <ion-col text-right>
         <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
         </button>
       </ion-col>
     </ion-row>
@@ -59,11 +60,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Ambat
+        Ampap
       </ion-card-title>
       <p>
-        Pukul, Memukul 
-        In english : Hit / Hip dont lie
+        In Malay - Ruam
+        In English - Rash
       </p>
     </ion-card-content>
 
@@ -82,8 +83,8 @@
       </ion-col>
       <ion-col text-right>
         <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
         </button>
       </ion-col>
     </ion-row>
@@ -98,10 +99,12 @@
 
     <ion-card-content>
       <ion-card-title>
-        Queen
+        Ugi
       </ion-card-title>
       <p>
-        The British rock band formed in London in 1970, and is considered one of the biggest stadium rock bands in the world.
+        In Malay - Rugi
+        In English - Loss
+    
       </p>
     </ion-card-content>
 
@@ -120,8 +123,8 @@
       </ion-col>
       <ion-col text-right>
         <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
         </button>
       </ion-col>
     </ion-row>
@@ -136,10 +139,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Run-D.M.C.
+       Selesai
       </ion-card-title>
       <p>
-        The American hip hop group widely acknowledged as one of the most influential acts in the history of hip hop.
+        In Malay - Salasai
+        In English - Complete / Done
       </p>
     </ion-card-content>
 
@@ -158,8 +162,8 @@
       </ion-col>
       <ion-col text-right>
         <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='share-alt'></ion-icon>
-          Share
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
         </button>
       </ion-col>
     </ion-row>
