--- a/src/pages/bisaya/bisaya.html
+++ b/src/pages/bisaya/bisaya.html
@@ -35,10 +35,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Asuh
+        Alap
       </ion-card-title>
       <p>
-        Menyuruh, Mendulur 
+        In Malay - Ambil <br>
+        In English - Going Down 
       </p>
     </ion-card-content>
 
@@ -56,10 +57,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
@@ -73,11 +74,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Ambat
+        Ndawo
       </ion-card-title>
       <p>
-        Pukul, Memukul 
-        In english : Hit / Hip dont lie
+       In Malay - <i>Turun</i> <br>
+       In English - 
       </p>
     </ion-card-content>
 
