--- a/src/pages/bisaya/bisaya.html
+++ b/src/pages/bisaya/bisaya.html
@@ -78,7 +78,7 @@
       </ion-card-title>
       <p>
        In Malay - <i>Turun</i> <br>
-       In English - 
+       In English - Take
       </p>
     </ion-card-content>
 
@@ -96,10 +96,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
@@ -113,10 +113,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Queen
+        Rabas
       </ion-card-title>
       <p>
-        The British rock band formed in London in 1970, and is considered one of the biggest stadium rock bands in the world.
+        In Malay - <i>Wajah</i><br>
+        In English - Face
       </p>
     </ion-card-content>
 
@@ -134,10 +135,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
@@ -151,10 +152,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Run-D.M.C.
+        Sanang Ganawo
       </ion-card-title>
       <p>
-        The American hip hop group widely acknowledged as one of the most influential acts in the history of hip hop.
+        In Malay - <i>Gembira</i><br>
+        In English - Happy
       </p>
     </ion-card-content>
 
@@ -172,10 +174,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
