--- a/src/pages/dusun/dusun.html
+++ b/src/pages/dusun/dusun.html
@@ -80,7 +80,7 @@
         Lomot
       </ion-card-title>
       <p>
-        In Malay - Diam <br>
+        In Malay - <i>Diam</i> <br>
         In English - Silent, Quiet
       </p>
     </ion-card-content>
@@ -119,7 +119,7 @@
         Kuku
       </ion-card-title>
       <p>
-       In Malay - Duduk <br>
+       In Malay - <i>Duduk</i> <br>
        In English - Sit
       </p>
     </ion-card-content>
@@ -158,7 +158,7 @@
         Tanggang
       </ion-card-title>
       <p>
-       In Malay - Angkat <br>
+       In Malay -<i> Angkat</i> <br>
        In English - Lift
       </p>
     </ion-card-content>
