--- a/src/pages/murut/murut.html
+++ b/src/pages/murut/murut.html
@@ -36,10 +36,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Asuh
+        Do Buror
       </ion-card-title>
       <p>
-        Menyuruh, Mendulur 
+        In Malay - <i>Sihat</i><br>
+        In English - Healthy
       </p>
     </ion-card-content>
 
@@ -57,10 +58,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
@@ -74,11 +75,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Ambat
+        Mengagu
       </ion-card-title>
       <p>
-        Pukul, Memukul 
-        In english : Hit / Hip dont lie
+        In Malay - <i>Sibuk</i><br>
+        In English - Hectic, Busy
       </p>
     </ion-card-content>
 
@@ -96,10 +97,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
@@ -113,10 +114,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Queen
+        Ngibal
       </ion-card-title>
       <p>
-        The British rock band formed in London in 1970, and is considered one of the biggest stadium rock bands in the world.
+        In Malay - <i>Tukar</i><br>
+        In English - Change, Replace
       </p>
     </ion-card-content>
 
@@ -134,10 +136,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
@@ -151,10 +153,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Run-D.M.C.
+        Umai
       </ion-card-title>
       <p>
-        The American hip hop group widely acknowledged as one of the most influential acts in the history of hip hop.
+        In Malay - <i>Singgah</i><br>
+        In English - Visit, Drop by 
       </p>
     </ion-card-content>
 
@@ -172,10 +175,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
