--- a/src/pages/melayu-brunei/melayu-brunei.html
+++ b/src/pages/melayu-brunei/melayu-brunei.html
@@ -35,10 +35,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Asuh
+      Bajurit; Bakalampar
       </ion-card-title>
       <p>
-        Menyuruh, Mendulur 
+        In Malay - <i>Selerak</i><br>
+        In English - Messy
       </p>
     </ion-card-content>
 
@@ -56,10 +57,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
@@ -73,11 +74,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Ambat
+        Gagau
       </ion-card-title>
       <p>
-        Pukul, Memukul 
-        In english : Hit / Hip dont lie
+        In Malay - <i>Sibuk</i><br>
+        In English - Busy
       </p>
     </ion-card-content>
 
@@ -95,10 +96,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
@@ -112,10 +113,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Queen
+        Iski
       </ion-card-title>
       <p>
-        The British rock band formed in London in 1970, and is considered one of the biggest stadium rock bands in the world.
+        In Malay - <i>Gembira</i><br>
+        In English - Happy
       </p>
     </ion-card-content>
 
@@ -133,10 +135,10 @@
         </button>
       </ion-col>
       <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
+        <!-- <button ion-button clear small color="danger" icon-start>
           <ion-icon name='share-alt'></ion-icon>
           Share
-        </button>
+        </button> -->
       </ion-col>
     </ion-row>
 
@@ -150,10 +152,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Run-D.M.C.
+        Mulih
       </ion-card-title>
       <p>
-        The American hip hop group widely acknowledged as one of the most influential acts in the history of hip hop.
+        In Malay - <i>Pulang</i>
+        In English - Going Home
       </p>
     </ion-card-content>
 
