--- a/src/pages/belait/belait.html
+++ b/src/pages/belait/belait.html
@@ -1,32 +1,11 @@
-<!--
-  Generated template for the BelaitPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-
-
 <ion-header>
-    <ion-toolbar>
-        
-            <button>
-                <ion-icon menuToggle name= "menu"></ion-icon>
-            </button>
-
-        <ion-title>
-            NAVIGATION
-        </ion-title>
-    </ion-toolbar>
+  <ion-toolbar color="btn" >
+    <button>
+        <ion-icon menuToggle name= "menu"></ion-icon>
+    </button>
+    <ion-title>Dictionary</ion-title>
+</ion-toolbar>
 </ion-header>
-
-
-
-
-
-    <!-- <ion-navbar primary>
-      <ion-title>Belait</ion-title>
-    </ion-navbar> -->
-  
  
 
 <ion-content class="cards-bg">
