--- a/src/pages/fav/fav.html
+++ b/src/pages/fav/fav.html
@@ -1,16 +1,18 @@
-<!--
-  Generated template for the FavPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
+  <ion-toolbar color="btn" >
+    <button>
+        <ion-icon menuToggle name= "menu"></ion-icon>
+    </button>
+    <ion-title>Menu</ion-title>
+</ion-toolbar>
+</ion-header>
+<!-- <ion-header>
 
   <ion-navbar>
     <ion-title>FavPage</ion-title>
   </ion-navbar>
 
-</ion-header>
+</ion-header> -->
 
 
 <ion-content padding>
