--- a/src/pages/tutong/tutong.html
+++ b/src/pages/tutong/tutong.html
@@ -1,34 +1,11 @@
-<!--
-  Generated template for the TutongPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-    <ion-toolbar>
-        
-            <button>
-                <ion-icon menuToggle name= "menu"></ion-icon>
-            </button>
-
-        <ion-title>
-            NAVIGATION
-        </ion-title>
-    </ion-toolbar>
+  <ion-toolbar color="btn" >
+    <button>
+        <ion-icon menuToggle name= "menu"></ion-icon>
+    </button>
+    <ion-title>Dictionary</ion-title>
+</ion-toolbar>
 </ion-header>
-
-
-<!-- <ion-header>
-
-  <ion-navbar>
-    <ion-title>Tutong</ion-title>
-  </ion-navbar>
-  <script>
-      var bleep = new Audio();
-      bleep.src = "assets/sound/JogetSatelite.mp3";
-    </script>
-
-</ion-header> -->
 
 <ion-content class="cards-bg">
     
