--- a/src/pages/belait/belait.html
+++ b/src/pages/belait/belait.html
@@ -16,50 +16,11 @@
 
     <ion-card-content>
       <ion-card-title>
-        Ungeil
-      </ion-card-title>
-      <p>
-        In Malay - Putung
-        In English - Cut  
-      </p>
-    </ion-card-content>
-
-    <ion-row no-padding>
-      <ion-col>
-        <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='star'></ion-icon>
-          Favorite
-        </button>
-      </ion-col>
-      <ion-col text-center>
-        <button ion-button clear small color="danger" icon-start>
-          <ion-icon name='musical-notes'></ion-icon>
-          Listen
-        </button>
-      </ion-col>
-      <ion-col text-right>
-        <button ion-button clear small color="danger" icon-start>
-          <!-- <ion-icon name='share-alt'></ion-icon>
-          Share -->
-        </button>
-      </ion-col>
-    </ion-row>
-
-  </ion-card>
-
-  <ion-card>
-
-    <div>
-      
-    </div>
-
-    <ion-card-content>
-      <ion-card-title>
         Banasi
       </ion-card-title>
       <p>
-        In Malay - Rusak
-        In English - Broken
+        In Malay - <i>Rosak</i><br>
+        In English - Broken 
       </p>
     </ion-card-content>
 
@@ -97,8 +58,8 @@
         Muwad
       </ion-card-title>
       <p>
-       In Malay - Selesma
-       In English - Fever
+        In Malay - <i>Selesma</i><br>
+        In English - Fever
       </p>
     </ion-card-content>
 
@@ -133,11 +94,50 @@
 
     <ion-card-content>
       <ion-card-title>
-        Punggung
+        Ieng
       </ion-card-title>
       <p>
-        In Malay - ieng
+        In Malay - <i>Punggung</i><br>
         In English - Hip
+      </p>
+    </ion-card-content>
+
+    <ion-row no-padding>
+      <ion-col>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='star'></ion-icon>
+          Favorite
+        </button>
+      </ion-col>
+      <ion-col text-center>
+        <button ion-button clear small color="danger" icon-start>
+          <ion-icon name='musical-notes'></ion-icon>
+          Listen
+        </button>
+      </ion-col>
+      <ion-col text-right>
+        <button ion-button clear small color="danger" icon-start>
+          <!-- <ion-icon name='share-alt'></ion-icon>
+          Share -->
+        </button>
+      </ion-col>
+    </ion-row>
+
+  </ion-card>
+
+  <ion-card>
+
+    <div>
+      
+    </div>
+
+    <ion-card-content>
+      <ion-card-title>
+        Ungeil
+      </ion-card-title>
+      <p>
+        In Malay - <i>Putung</i><br>
+        In English - Cut
       </p>
     </ion-card-content>
 
