--- a/src/pages/tutong/tutong.html
+++ b/src/pages/tutong/tutong.html
@@ -15,7 +15,7 @@
        Buas
       </ion-card-title>
       <p>
-        In Malay - Tuah <br>
+        In Malay - <i>Tuah</i> <br>
         In English - Lucky
       </p>
     </ion-card-content>
@@ -55,7 +55,7 @@
         Buat
       </ion-card-title>
       <p>
-        In Malay - Panjang<br>
+        In Malay - <i>Panjang</i><br>
         In english - Long
       </p>
     </ion-card-content>
@@ -94,7 +94,7 @@
        De'ek
       </ion-card-title>
       <p>
-        In Malay - Kecil  <br>
+        In Malay -<i>Kecil</i> <br>
         In English - Small
       </p>
     </ion-card-content>
@@ -133,8 +133,8 @@
         Dabo
       </ion-card-title>
       <p>
-        In Malay - belanga / periuk <br>
-        In English - mangkuks
+        In Malay - <i>Belanga ; Periuk</i> <br>
+        In English - Pot
       </p>
     </ion-card-content>
 
