--- a/src/pages/bisaya/bisaya.html
+++ b/src/pages/bisaya/bisaya.html
@@ -25,7 +25,7 @@
 
     <ion-row no-padding>
       <ion-col>
-        <button ion-button clear small color="danger" icon-start>
+        <button ion-button clear small color="danger" icon-start (click)="doConfirm()">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
@@ -64,7 +64,7 @@
 
     <ion-row no-padding>
       <ion-col>
-        <button ion-button clear small color="danger" icon-start>
+        <button ion-button clear small color="danger" icon-start (click)="doConfirm()">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
@@ -103,7 +103,7 @@
 
     <ion-row no-padding>
       <ion-col>
-        <button ion-button clear small color="danger" icon-start>
+        <button ion-button clear small color="danger" icon-start (click)="doConfirm()">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
@@ -142,7 +142,7 @@
 
     <ion-row no-padding>
       <ion-col>
-        <button ion-button clear small color="danger" icon-start>
+        <button ion-button clear small color="danger" icon-start (click)="doConfirm()">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
