--- a/src/pages/dusun/dusun.html
+++ b/src/pages/dusun/dusun.html
@@ -26,7 +26,7 @@
 
     <ion-row no-padding>
       <ion-col>
-        <button ion-button clear small color="danger" icon-start>
+        <button ion-button clear small color="danger" icon-start (click)="doConfirm()">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
@@ -65,7 +65,7 @@
 
     <ion-row no-padding>
       <ion-col>
-        <button ion-button clear small color="danger" icon-start>
+        <button ion-button clear small color="danger" icon-start (click)="doConfirm()">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
@@ -104,7 +104,7 @@
 
     <ion-row no-padding>
       <ion-col>
-        <button ion-button clear small color="danger" icon-start>
+        <button ion-button clear small color="danger" icon-start (click)="doConfirm()">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
@@ -143,7 +143,7 @@
 
     <ion-row no-padding>
       <ion-col>
-        <button ion-button clear small color="danger" icon-start>
+        <button ion-button clear small color="danger" icon-start (click)="doConfirm()">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
