--- a/src/pages/kedayan/kedayan.html
+++ b/src/pages/kedayan/kedayan.html
@@ -26,7 +26,7 @@
 
     <ion-row no-padding>
       <ion-col>
-        <button ion-button clear small color="danger" icon-start>
+        <button ion-button clear small color="danger" icon-start (click)="doConfirm()">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
@@ -65,7 +65,7 @@
 
     <ion-row no-padding>
       <ion-col>
-        <button ion-button clear small color="danger" icon-start>
+        <button ion-button clear small color="danger" icon-start (click)="doConfirm()">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
@@ -105,7 +105,7 @@
 
     <ion-row no-padding>
       <ion-col>
-        <button ion-button clear small color="danger" icon-start>
+        <button ion-button clear small color="danger" icon-start (click)="doConfirm()">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
@@ -144,7 +144,7 @@
 
     <ion-row no-padding>
       <ion-col>
-        <button ion-button clear small color="danger" icon-start>
+        <button ion-button clear small color="danger" icon-start (click)="doConfirm()">
           <ion-icon name='star'></ion-icon>
           Favorite
         </button>
