--- a/src/pages/fav/fav.html
+++ b/src/pages/fav/fav.html
@@ -1,8 +1,17 @@
 <ion-header>
+  <ion-toolbar color="btn" >
+    <button>
+        <ion-icon menuToggle name= "menu"></ion-icon>
+    </button>
+    <ion-title>Favourite</ion-title>
+</ion-toolbar>
+</ion-header>
+
+<!-- <ion-header>
   <ion-navbar>
     <ion-title>Favourite</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content class="cards-bg">
 
